# le-agent-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
conformance/: CHECKSUMS  README.md
conformance/vectors/: discover-resilience.json  negotiable-floor.json  price-tag.json
examples/: demo_full_loop.py  demo_mcp_integration.py  demo_mock_relay.py  simple_provider.py  simple_requester.py
src/le_agent_sdk/: __init__.py
src/le_agent_sdk/agent/: __init__.py  manager.py
src/le_agent_sdk/l402/: __init__.py  client.py
src/le_agent_sdk/models/: __init__.py  agreement.py  attestation.py  capability.py  request.py
src/le_agent_sdk/nostr/: __init__.py  event.py  relay.py  tags.py
tests/: test_agent_manager.py  test_conformance.py  test_interop.py  test_l402_client.py  test_models.py  test_nostr_event.py  test_nostr_tags.py  test_security_regressions.py
tests/fixtures/: dotnet_signed_events.json
