[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "le-agent-sdk"
version = "0.1.0"
description = "Python SDK for Lightning Enable Agent Service Agreements"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Lightning Enable", email = "dev@lightningenable.com" },
]
readme = "README.md"
keywords = ["nostr", "lightning", "l402", "agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "websockets>=11.0",
    "secp256k1>=0.14.0",
    "l402-requests>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://lightningenable.com"
Repository = "https://github.com/ArcadeLabsInc/lightning-enable-agent-sdk-python"
Issues = "https://github.com/ArcadeLabsInc/lightning-enable-agent-sdk-python/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
