[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "le-agent-sdk"
version = "0.4.2"
description = "Python SDK for Lightning Enable Agent Service Agreements"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Lightning Enable", email = "dev@lightningenable.com" },
]
readme = "README.md"
keywords = ["nostr", "lightning", "l402", "agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "websockets>=11.0",
    # BIP-340 Schnorr over secp256k1. coincurve ships prebuilt wheels for the
    # platforms we support; the `secp256k1` package it replaced in 0.4.0 required
    # a native build toolchain and could not be installed on Windows at all.
    "coincurve>=18.0",
    "l402-requests>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://lightningenable.com"
Repository = "https://github.com/refined-element/le-agent-sdk-python"
Issues = "https://github.com/refined-element/le-agent-sdk-python/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
